end of creation feader block

--- a/index.html
+++ b/index.html
@@ -4,12 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="reset/reset.css">
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="css/style.css">
     <title>CloudBudget</title>
 </head>
 <body>
-    
+    <header class="header-banner">
+        <div class="container">
+            <div class="header-row header-row__box">
+                <div class="header-logo">
+                    <a href="#">
+                        <svg class="header-logo__icon" viewBox="0 0 26 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20.605 8.05005C20.605 7.61505 20.75 7.18005 20.75 6.60005C20.75 3.41005 18.14 0.800049 14.95 0.800049C12.63 0.800049 10.745 2.10505 9.73001 3.99005C9.44001 3.84505 8.86001 3.70005 8.42501 3.70005C6.39501 3.70005 4.80001 5.29505 4.80001 7.32505C4.80001 7.61505 4.80001 7.90505 4.94501 8.05005C2.33501 8.48505 0.450012 10.515 0.450012 13.125C0.450012 15.88 2.77001 18.2 5.52501 18.2H20.025C22.78 18.2 25.1 15.88 25.1 13.125C25.1 10.515 23.215 8.34005 20.605 8.05005Z" fill="white"/>
+                        </svg>
+                    </a>                        
+                    <a class="header-logo__name">CloudBudget</a>
+                </div>
+                <nav>
+                    <ul class="header-list">
+                        <li class="header-list__item"><a href="#" class="header-list__link">OVERVIEW </a></li>
+                        <li class="header-list__item"><a href="#" class="header-list__link">FEATURES</a></li>
+                        <li class="header-list__item"><a href="#" class="header-list__link">TECHNOLOGY</a></li>
+                        <li class="header-list__item"><a href="#" class="header-list__link">CONTACT</a></li>
+                        <li class="header-list__item"><a href="#" class="header-list__link">Sign up</a></li>
+                    </ul>
+                </nav>            
+                <a href="#" class="header header__login">login</a>
+            </div>
+            <div class="header-column">
+                <h1 class="header-column__title">CloudBudget</h1>
+                <p class="header-column__text">Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial of</p>
+                <p class="header-column__text">Up to €4.99</p>
+                <a href="#" class="header-column__button">Sign Up</a>
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
