--- a/index.html
+++ b/index.html
@@ -40,8 +40,48 @@
             </div>
         </div>
     </header>
-    <main>
-
+    <main class="features">
+        <div class="container">
+            <h2 class="block-title">Features</h2>
+            <div class="cards-features">
+                <article class="features-card">
+                    <img src="img/features1.jpg" alt="support for all types of currencies" class="fetures-card__img">
+                    <div class="card">
+                        <h3 class="card__title">
+                            Supports All Currencies and Cards
+                        </h3>
+                        <p class="card__text">
+                            We support all popular currencies and is fully customizable to add
+                        </p>
+                        <a href="#" class="card__link">Read More</a>
+                    </div>
+                </article>
+                <article class="features-card">
+                    <img src="img/features2.jpg" alt="software support for the application" class="features-card__img">
+                    <div class="card">
+                        <h3 class="card__title">
+                            Manage your expenses on the go
+                        </h3>
+                        <p class="card__text">
+                            You can access your account from anywhere in the world on any device
+                        </p>
+                        <a href="#" class="card__link">Read More</a>
+                    </div>
+                </article>
+                <article class="features-card">
+                    <img src="img/features3.jpg" alt="Cloud Management" class="fetures-card__img">
+                    <div class="card">
+                        <h3 class="card__title">
+                            Cloud Budget Management Software
+                        </h3>
+                        <p class="card__text">
+                            Our software is made so you can access and manage your budget
+                        </p>
+                        <a href="#" class="card__link">Read More</a>
+                    </div>
+                </article>
+            </div>
+        </div>
     </main>
     <footer>
 
